--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,7 @@ if(NOT CMAKE_BUILD_TYPE)
 endif()
 
 set(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
-
-file(GLOB_RECURSE SOURCES
-	"${SRC_DIR}/${PROJECT_NAME}/*.h"
-	"${SRC_DIR}/${PROJECT_NAME}/*.cpp"
-)
+file(GLOB_RECURSE SOURCES "${SRC_DIR}/${PROJECT_NAME}/*.cpp")
 
 set(SDL2_DIR "C:/Libs/build_ready/SDL2-2.0.20-devel")
 find_package(SDL2 REQUIRED)
@@ -25,5 +21,6 @@ target_include_directories(${PROJECT_NAME} PRIVATE "${SRC_DIR}")
 
 if(MSVC)
   target_compile_options(${PROJECT_NAME} PUBLIC "/GL")
+  target_link_options(${PROJECT_NAME} PUBLIC "/LTCG")
 endif()
 
